fix bottom white artifact when screen is too long

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,8 @@ audio,canvas,video{display:inline-block;}
 audio:not([controls]){display:none;height:0;}
 [hidden]{display:none;}
 html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}
-body{margin:0;}
+body{margin:0;display:flex;flex-direction:column;min-height:100vh;}
+.footer-wrap{margin-top:auto;}
 a:focus{outline:thin dotted;}
 a:active,a:hover{outline:0;}
 h1{font-size:2em;margin:0.67em 0;}
